tests/snapshots/render/iterm2@commonmark-spec-134-fenced_code_blocks.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/134-fenced_code_blocks.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m```                                                                         [32m │[0m
[32m│ [0maaa                                                                         [32m │[0m
[32m│ [0m```                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
